<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="65dp"
            android:layout_gravity="start"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/welcome"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="267dp"
            android:layout_height="50dp"
            android:gravity="end"
            android:text="@string/please_give_generously"
            android:textColor="#BAB6B6"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>
        <RadioGroup
            android:id="@+id/group"
            android:layout_width="293dp"
            android:layout_height="115dp"
            android:paddingStart="12dp"
            android:paddingEnd="20dp">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:text="@string/paypal" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="128dp"
                android:layout_height="61dp"
                android:text="@string/direct" />
        </RadioGroup>

        <NumberPicker
            android:id="@+id/numpick"
            android:layout_width="91dp"
            android:layout_height="216dp"
            android:layout_gravity="start"
            android:backgroundTint="@android:color/holo_blue_light"
            android:theme="@style/NumberPickerTheme">

        </NumberPicker>
    </TableRow>

    <TableRow>

        <ProgressBar
            android:id="@+id/progressBar9"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="187dp"
            android:layout_height="80dp"
            android:paddingStart="80dp"
            android:paddingEnd="100dp"
            android:layout_span="2" />

    </TableRow>

    <TableLayout>
        <TableRow>
            <Button
                android:id="@+id/donateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50sp"
                android:text = "@string/donate">
            </Button>

            <TextView
                android:id="@+id/total"
                android:layout_width="132dp"
                android:layout_height="47dp"
                android:gravity="center"
                android:text="@string/total_so_far"
                android:textColor="#BAB6B6"
                android:textSize="16sp">
            </TextView>

            <TextView
                android:id="@+id/totalDonated"
                android:layout_width="87dp"
                android:layout_height="47dp"
                android:gravity="center"
                android:textColor="#BAB6B6">
            </TextView>

        </TableRow>

    </TableLayout>

    <TableLayout>
        <Button
            android:id="@+id/emailButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:layout_marginStart="330sp"
            android:layout_marginTop="18dp"
            android:text="@string/mail"
            android:textSize="30sp">

        </Button>
    </TableLayout>
</TableLayout>